# ocp2kg

./: .gitignore  README.md  data-sample3.0.0.ttl  mappings_test.ttl  pyproject.toml  requirements.txt  review_mappings.ttl
change_data_template/: AddDataProperty.csv  AddSubClass_template.csv  RemoveClass_template.csv  RemoveSubClass_template.csv  csv_changes_mappings.rml.ttl
difftool_outputs/: contodiff_output.txt
epo-data/: changes_v3.0.1.html  changes_v3.0.1.md  changes_v3.1.0.md  changes_v4.0.0.html  changes_v4.0.0.md
epo-ontology/: ePO_3.1.ttl  ePO_v4.0.ttl
mappings/: AUT_full_mapping.rml.ttl  All_Added_SubClass.csv  All_Added_Triples.csv  All_Deleted_Class.csv  All_Deleted_SubClass.csv  All_Deleted_Triples.csv  All_Modified_Attributes.csv  config.ini  mapping.rml.ttl  mapping.yml
output_mappings/: updated_mappings_3.1.0.ttl  updated_mappings_3.1.0.yml  updated_mappings_4.0.ttl  updated_mappings_4.0.yml
queries/: AddClass.rq  AddClass1.rq  AddDataProperty.rq  AddObjectProperty.rq  AddSubClass.rq  Add_SubClass2.rq  ObtainOperation.rq  RemoveClass.rq  RemoveClassRecommendation.rq  RemoveDataProperty.rq  RemoveObjectProperty.rq  RemoveSubClass.rq
src/: __main__ 3.1.0.py  __main__.py  __main__4.0.0.py  added_clases.csv  added_classes.csv  added_classes3.0.0.csv  added_classes3.0.1.csv  added_classes3.1.csv  added_subclass.csv  added_subclass3.0.0.csv  added_subclass3.0.1.csv  added_subclass3.1.csv  added_subclass4.0.csv  added_triples.csv  added_triples3.0.0.csv  added_triples3.0.1.csv  added_triples3.1.csv  constants.py  deleted_classes.csv  demo.py  (+23 more)
(+149 files in other folders)
